gke/yaml/palette-phone.yaml
apiVersion: v1
kind: Service
metadata:
  name: palette3-phone
  labels:
    app: palette3-phone
spec:
  type: NodePort
  selector:
    app: palette3-phone
  ports:
    - name: palette3-phone
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: palette3-phone
  labels:
    app: palette3-phone
spec:
  replicas: 1
  serviceName: palette3-phone
  #podManagementPolicy: Parallel
  selector:
    matchLabels:
      app: palette3-phone
  template:
    metadata:
      labels:
        app: palette3-phone
    spec:
      restartPolicy: Always
      imagePullSecrets:
       - name: palette3-git-regcred 
      containers:
        - name: palette3-phone
          image: ghcr.io/palettehkcloud/palette3-api:2023.0721.005
          volumeMounts:
            - name: palette-repository
              mountPath: /orange/app/palette3/repository
            - name: tz-seoul
              mountPath: /etc/localtime
      volumes:
        - name: tz-seoul
          hostPath:
            path: /usr/share/zoneinfo/Asia/Seoul
        - name: palette-repository
          nfs:
            server: 10.39.97.2
            path: /paletteVolume
