gke/yaml/palette-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: palette3-ui
  labels:
    app: palette3-ui
spec:
  type: NodePort
  ports:
    - port: 3003
      targetPort: 3003
      protocol: TCP
  selector:
    app: palette3-ui
---
apiVersion: apps/v1
kind: StatefulSet 
metadata:
  name: palette3-ui
  labels:
    app: palette3-ui    
spec:
  replicas: 1
  serviceName: palette3-ui
  selector:
    matchLabels:
      app: palette3-ui
  template:
    metadata:
      labels:
        app: palette3-ui
    spec:
      restartPolicy: Always
      imagePullSecrets:
       - name: palette3-git-regcred
      containers:
        - name: palette3-ui
          image: "ghcr.io/palettehkcloud/palette3-ui:2023.0719.002"
          ports:
            - containerPort: 3003
              protocol: TCP  
          volumeMounts:
            - name: tz-seoul
              mountPath: /etc/localtime
      volumes:
        - name: tz-seoul
          hostPath:
            path: /usr/share/zoneinfo/Asia/Seoul
